# ai-agent-generator

./: .gitignore  CHANGELOG.md  PERSONA_LIBRARY_SPEC.md  README.md  docker-compose.yml  package-lock.json  package.json  promptfooconfig.yaml  pyproject.toml  tsconfig.json
.githooks/: README.md  pre-push
.github/: README.md
.github/workflows/: README.md  ci.yml
V1/: __init__.py  index.py
V1/artifacts/: index.py
V1/contracts/: index.py  phase_contracts.py  types.py
V1/features/: artifact_writer.py  cli_runner.py  gate_evaluator.py  index.py  output_parser.py  phase_runner.py  prompt_loader.py
V1/prompts/: index.py
V1/steps/: __init__.py  index.py  step_phase_00.py  step_phase_00_5.py  step_phase_01.py  step_phase_02.py  step_phase_03.py  step_phase_04.py  step_phase_05.py  step_phase_06.py  step_phase_07.py  step_phase_08.py  step_phase_09.py  step_phase_10.py  step_phase_11.py  step_phase_12.py  step_phase_13.py  step_phase_14.py  step_phase_15.py  step_phase_16.py  step_phase_17.py  step_phase_18.py  step_phase_19.py
V1/utils/: constants.py  index.py
data/: README.md  benchmark-tasks.jsonl  company-os-progress-rules.json  medium-hard-sde-suite.jsonl  real-workflow-tasks.jsonl  sde-project-plan.example.json
data/artifact_key_parity/: artifact_key_schema_contract.json  latest_report.json  local_index.json  migration_state.json  object_index.json  reconciliation_details.json  trend_history.jsonl
data/async_job_plane/: dlq.json  job_events.jsonl  latest_report.json  lifecycle_contract.json  queue_state.json  workers.json  (+1 more)
docs/: AI-Professional-Evolution-Master-Architecture.md  ESSENTIAL.md  README.md  RESEARCH.md  SDE-Task-Execution-DoD-Policy.md  UNDERSTANDING-THE-CODE.md  ai-agent-feature-completion-playbook.md  architecture-goal-completion.md  developer-walkthrough.md  local-llm-self-finetuning-references.md  long-term-memory-and-memory-management-references.md  master-architecture-feature-completion.md  operating-system-folder-structure.md  persona-library-full-contract.md  scale-risk-external-references.md  senior-agent-lifecycle-plan.md  swarm-token-and-system-requirements-math.md
libs/: README.md
migrations/: README.md
scripts/: README.md  artifact_key_parity_gate.py  async_job_plane_gate.py  bump_version.py  config_overlay_gate.py  cost_attribution_gate.py  cross_tenant_isolation_gate.py  cursor-phase-orchestrator.mjs  cursor_phase_orchestrator.py  edge_admission_gate.py  failure_drills_gate.py  generate_scale_feature_audit_bundle.py  idempotency_gate.py  incident_runbooks_gate.py  init-git-hooks.sh  local_non_regression_gate.py  local_prod_parity_gate.py  mcp_broker_gate.py  plane_split_gate.py  plugin_authz_gate.py  plugin_circuit_breaker_gate.py  plugin_observability_gate.py  plugin_registry_gate.py  plugin_rollout_gate.py  run-stage1-suite.sh  sandbox_hardening_gate.py  semantic_parity_gate.py  stage1-cold-start-demo.sh  tenant_quota_gate.py  trust_bulkheads_gate.py  validate_scale_feature_audit.py  version-index-only.sh  version_negotiation_gate.py  weighted_queue_fairness_gate.py
src/: README.md  config.ts  types.ts
test/: cli.test.ts  metrics.test.ts  runid.test.ts  validation.test.ts
tests/: README.md  conftest.py  test_deepeval_smoke.py  test_otel_export_smoke.py  test_otel_otlp_exporter_smoke.py  test_phase0_repo_invariants.py  test_v1_contracts.py  test_v1_failure_paths.py  test_v1_features.py  test_v1_orchestration.py  test_version_bump.py
(+2104 files in other folders)
