[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[project]
name = "sde"
version = "0.11.0"
description = "SDE: local CLI orchestrator toward full-stack, gated delivery (guarded vs baseline; contracts in docs/sde and src/sde_gates)"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sde = "orchestrator.runtime.cli.main:main"
agent = "orchestrator.runtime.cli.main:main"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["src/orchestrator/tests/unit", "tests"]

[tool.hatch.build.targets.wheel]
packages = [
  "src/orchestrator",
  "src/sde_foundations",
  "src/sde_gates",
  "src/sde_modes",
  "src/sde_pipeline",
]
