[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src", "src/production_architecture_what_runs_on_the_laptop", "libs"]

[project]
name = "sde"
version = "0.13.0"
description = "SDE: local CLI orchestrator toward full-stack, gated delivery (guarded vs baseline; see docs/ and src/guardrails_and_safety)"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sde = "orchestrator.runtime.cli.main:main"
agent = "orchestrator.runtime.cli.main:main"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["src/production_architecture_what_runs_on_the_laptop/orchestrator/tests/unit", "tests"]

[tool.hatch.build.targets.wheel]
packages = [
  "src/guardrails_and_safety",
  "src/production_architecture_what_runs_on_the_laptop/orchestrator",
  "src/workflow_pipelines",
  "libs/storage",
  "libs/sde_types",
  "libs/common",
  "libs/artifacts",
  "libs/sde_eval",
  "libs/model_adapter",
  "libs/safeguards",
  "libs/gates_constants",
  "libs/gates_manifest",
  "libs/time_and_budget",
]
