[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src", "src/production_architecture/local_runtime"]

[project]
name = "sde"
version = "0.21.0"
description = "SDE: local CLI orchestrator toward full-stack, gated delivery (guarded vs baseline; see docs/ and src/guardrails_and_safety)"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sde = "orchestrator.runtime.cli.main:main"
agent = "orchestrator.runtime.cli.main:main"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["src/production_architecture/local_runtime/orchestrator/tests/unit", "tests"]

[tool.hatch.build.targets.wheel]
packages = [
  "src/guardrails_and_safety",
  "src/production_architecture/local_runtime/orchestrator",
  "src/workflow_pipelines",
  "src/production_architecture/storage/storage",
  "src/core_components/orchestrator/sde_types",
  "src/core_components/orchestrator/common",
  "src/workflow_pipelines/run_manifest/artifacts",
  "src/evaluation_framework/offline_evaluation/sde_eval",
  "src/production_architecture/local_runtime/model_adapter",
  "src/guardrails_and_safety/review_gating_evaluator_authority/safeguards",
  "src/guardrails_and_safety/risk_budgets_permission_matrix/gates_constants",
  "src/guardrails_and_safety/risk_budgets_permission_matrix/gates_manifest",
  "src/guardrails_and_safety/risk_budgets_permission_matrix/time_and_budget",
]
